Fri Jun 27 00:00:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (set_arg0, ruby_prog_init): freeze $0.  a patch from Keita
	  Yamaguchi <keita.yamaguchi at gmail.com>.

Thu Jun 26 17:43:41 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_f_trace_var): should not be allowed at safe level 4.  
	  a patch from Keita Yamaguchi <keita.yamaguchi at gmail.com>.

Thu Jun 26 11:04:30 2008  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems: Update to RubyGems 1.2.0 r1824.  Incorporates patch by
	Yusuke ENDOH [ruby-core:17353].

Thu Jun 26 00:48:31 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): not operand might be empty.  [ruby-dev:35227]

Wed Jun 25 21:54:34 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): make functional-style not operator to act
	  like function.  see <http://d.hatena.ne.jp/ku-ma-me/20080624/p1>.

Wed Jun 25 15:28:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_fill): not depend on unspecified behavior at integer
	  overflow.  reported by Vincenzo Iozzo <snagg AT openssl.it>.

Wed Jun 25 13:42:44 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/erb.rb (ERB::Compiler:Buffer#new): push magic comment first.

	* lib/erb.rb (ERB::Compiler#compile): fix for broken input.

Wed Jun 25 12:10:01 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/erb.rb (ERB::Compiler#compile): magic comment needs LF.

Wed Jun 25 09:31:11 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/erb.rb (ERB::Compiler#compile): output magic comment.

Tue Jun 24 22:14:36 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (eval_string_with_cref): preserve parse_in_eval even if
	  exception raised.

Tue Jun 24 22:09:18 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(ole_invoke): fix memory leak.
	  [ruby-bugs-20792]

Tue Jun 24 17:20:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_fork_with_pthread): check after check for